Design problems to be solved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
         <item>Choose Pain Power</item>
         <item>Pain Barable</item>
         <item>Moderate Pain</item>
-        <item>Serve Pain</item>
+        <item>Severe Pain</item>
         <item>Very Serve Pain</item>
         <item>Worst Pain Possible</item>
 
