--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,11 +21,11 @@
     <string-array name="PainPower">
 
         <item>Choose Pain Power</item>
-        <item>Pain Barable</item>
-        <item>Moderate Pain</item>
-        <item>Severe Pain</item>
-        <item>Very Serve Pain</item>
-        <item>Worst Pain Possible</item>
+        <item>Bearable</item>
+        <item>Moderate </item>
+        <item>Severe</item>
+        <item>Very Severe</item>
+        <item>Worst</item>
 
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
